package com.gmms;

public class SentenceGenerator {

}