package com.gmms;

public class Template {

}